2008-04-25  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TileId.cpp:
    * src/lib/TileId.h:

    Fix performance regression of the TileId patch of 2008-04-24.
    - make operators and hash function friends of TileId so they can
      access the members directly.
    - improve hash function, no more QString usage here.
    - fix for operator<, comparison of m_tileX was wrong.

    --timedemo results for my machine, average of 5 runs each:
    before TileId patch: 13722 ms, 14,575 fps
    with TileId patch:   18103 ms, 11,048 fps (32% regression)
    with TileId fixed:   13788 ms, 14,506 fps (0,5% regression)

2008-04-25  Inge Wallin  <inge@lysator.liu.se>

	Crazy issue 13: Proper include directives
	* src/marble_part.cpp: duplicate include
	* src/tilecreator/tccore.h: add include guard

	Crazy issue 25: Spelling errors
	* src/lib/geodata/scene/GeoSceneMap.h: Spelling fixes
	
	Crazy issue 7: Single char QStrings better written as a QChar
	* src/lib/MapThemeManager.cpp (createMapThemeRow): 

2008-04-25  Torsten Rahn  <rahn@kde.org>

    * src/lib/geodata/handlers/dgml/DGMLSectionTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLValueTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLElementDictionary.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLEnabledTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLItemTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLAttributeDictionary.{cpp,h}:
    * src/lib/geodata/GeoDataTest.{cpp,h}:
    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/scene/GeoSceneItem.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneSection.{cpp,h}:
    * src/lib/geodata/scene/GeoSceneProperty.{cpp,h}:
    * data/maps/earth/srtm/srtm.dgml:

    - Changing the "Enabled" element to "Value"
    - Introducing the "Connect(To)" attribute in the legend's items and sections.

2008-04-24  Torsten Rahn  <rahn@kde.org>

    * src/MarbleTest.cpp:

    - Reverting patch from Jordi Polo which rather seems to